# coop-kobe-downloader

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  release-please.yml
src/coop_kobe_downloader/: __init__.py  __main__.py  driver_helper.py
src/coop_kobe_downloader/lib/: __init__.py  driver.py  week.py
