[project]
name = "coop-kobe-downloader"
version = "0.2.2"
description = "Add your description here"
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
dependencies = [
    "selenium>=4.22.0",
    "webdriver-manager>=4.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
keywords = ["coop","csv","parser","japanese","japan"]

[project.urls]
Homepage = "https://github.com/ryohidaka/coop-kobe-downloader"
Repository = "https://github.com/ryohidaka/coop-kobe-downloader"
Issues = "https://github.com/ryohidaka/coop-kobe-downloader/issues"
Changelog = "https://github.com/ryohidaka/blob/main/coop-kobe-downloader/CHANGELOG.md"

[project.scripts]
"coop-kobe-downloader" = "coop_kobe_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coop_kobe_downloader"]
